9 урок без доп + 8 урок с доп

--- a/lesson 9/index.html
+++ b/lesson 9/index.html
@@ -41,8 +41,8 @@
 		</div>
 	</div>
 	<div class="content">
-		<div class="container" id="about">
-			<div class="info" >
+		<div class="container">
+			<div class="info" id="about">
 				<div class="info-header">
 					<div class="info-header-tab">Лечение</div>
 					<div class="info-header-tab">Отдых</div>
